loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:1: error: Missing closing brace `}' assumed here
var comp:int= 0
^Poucet1:11: error: ';' expected but 'else' found.
  else{
  ^